--- a/css/styles.css
+++ b/css/styles.css
@@ -2949,15 +2949,15 @@ p {
 }
 
 header.masthead {
-    padding-top: 10.5rem;
-    padding-bottom: 6rem;
+    padding-top: 19rem;
+    padding-bottom: 10rem;
     text-align: center;
     color: #fff;
     background-image: url(../assets/img/logo.jpeg);
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
-    background-size: cover
+    background-size: auto
 }
 
 header.masthead .masthead-subheading {
@@ -2978,8 +2978,8 @@ header.masthead .masthead-heading {
 
 @media (min-width:768px) {
     header.masthead {
-        padding-top: 17rem;
-        padding-bottom: 12.5rem
+        padding-top: 19rem;
+        padding-bottom: 12.5rem;
     }
     header.masthead .masthead-subheading {
         font-size: 2.25rem;
@@ -3064,13 +3064,14 @@ header.masthead .masthead-heading {
 
 section#contact {
     background-color: #212529;
-    background-image: url(../assets/img/map-image.png);
+    /* background-image: url(../assets/img/map-image.png); */
+    background-color: white;
     background-repeat: no-repeat;
     background-position: center
 }
 
 section#contact .section-heading {
-    color: #fff
+    color: #212529
 }
 
 .section-heading {
@@ -3133,6 +3134,8 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .footer {
+    background-color: #212529;
+    color: white;
     text-align: center;
     font-size: .9rem;
     font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
@@ -3151,5 +3154,5 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: rgba(33, 45, 57, .8)
+    background: rgba(33, 45, 57, .8);
 }
